index-styles.css
:root {
    --primary-color: #192a51;
    --accent-color: #FF4365;
    --light-color: rgba(255, 255, 255, 0.9);
}

@media screen and (max-width: 758px) {
    .navbar { display: none; }
    #content { margin-top: 210% !important; display: block !important; opacity: 1 !important; width: 100% !important; }
    .down-btn { display: block !important; }
    #logo {
        position: fixed !important;
    }
    .flip-card{
        max-width: 90% !important; height: auto !important;
    }

    .flip-card-front{
        display: block !important;
        text-align: center !important;
    }

    #profile-pic{
        width: 50% !important;
        margin: auto !important;
        margin-top: 1rem !important;
        object-fit: cover;
    }

    .bcard-name{
        margin: 0 !important;
        width: 100% !important;
        text-align: center;
    }
    .flip-card-back th{
        display: none;
    }
}

.expand-arrow {
    padding: 0 .5rem 0 .5rem;
    opacity: .52;
    transform: rotate(90deg);
    transition: transform .3s ease-in-out;
}

body {
    padding-top: 1.5rem;
    padding-left: 1.5rem;
    padding-bottom: 10rem;
}

.navbar {
    overflow: hidden;
    position: fixed;
    bottom: 0;
    width: 100%;
    padding: 1rem 1rem 1.5rem 1.5rem;
    margin-left: -2rem;
    font-family: 'Cabin';
    -webkit-backdrop-filter: blur(5px);
    backdrop-filter: blur(5px);
    background:rgba(25, 42, 81, 0.82);
    transition: padding 0.5s ease-in-out;
    max-width: 97%;
}

.centered-home {
    position: absolute;
    left: 50%;
    top: 40%;
    -webkit-transform: translate(-50%, -40%);
    transform: translate(-50%, -40%);
}

.main-signature {
    height: 6rem;
    fill: white;
    width: 100%;
    align-content: center;
}


@keyframes main-title-appear {
    from {opacity: 0;}
    to {opacity: 1;}
}

.subtitle {
    font-family: 'EB Garamond', serif;
    font-weight: lighter;
    font-size: 1.75rem;
    color: #9D75CB;
    background: #593484;
    -webkit-background-clip: text;
    -moz-background-clip: text;
    background-clip: text;
    -webkit-text-fill-color: transparent;
    text-shadow: rgba(255,255,255,0.5) 0rem .025rem .025rem;
    animation-name: main-title-appear;
    animation-duration: 1s;
}

.navbar a {
    padding: .5rem;
    opacity: 0;
    transition: opacity .3s ease-in-out, font-variation-settings .3s ease-in-out;
}

ul {
    margin:0;
}

.title {
    font-family: 'EB Garamond', serif;;
    font-size: 1.75rem;
    background-color: #474747;
    color: transparent;
    text-shadow: 0rem .05rem .05rem #ebebeb;
    -webkit-background-clip: text;  
    -moz-background-clip: text;
    background-clip: text;
    margin-bottom: .5rem;
}

.text {
    font-weight: 500;
    font-size: 1.25rem;
    color: var(--light-color);
    margin-bottom: 1rem;
    opacity: .82;
    max-width: 95%;
}

.selected-menu {
    font-weight: 700;
    opacity: 1;
}

h2, .subheader {
    color: var(--light-color);
    opacity: .82;
    margin: 0;
}
.subheader {
    margin-bottom: .5rem;
    font-size: 1.25rem;
    font-weight: 200;
}
b {
    font-weight: 400;
}

table {
    opacity: .82;
    font-size: 1.25rem;
}
th, td {
    padding: 0rem 3rem 0rem 0rem;
    max-width: 25rem;
    text-align: left;
    vertical-align: top;
}
p {
    margin-top: 0;
    margin-bottom: .5rem;
    padding-bottom: 0rem;
    text-overflow: ellipsis;
    overflow: hidden;
    color: var(--light-color);
}
.link {
    color: var(--primary-color);
    padding: 0rem 1rem 0rem 0rem;
    font-size: 1.25rem;
    opacity: .82;
    font-weight: 600;
}
.link:hover {
    opacity: 1;
}

.collapsible {
    font-family: 'Cabin';
    background-color: transparent;
    font-weight: 700;
    font-size: 1.25rem;
    color: var(--light-color);
    cursor: pointer;
    padding: 1rem 0 1rem 0;
    width: 100%;
    border: none;
    text-align: left;
    outline: none;
    border-radius: 0;
  }
  
.active, .collapsible:hover {
    background-color: transparent;
}

.content {
    padding: 0;
    background-color: transparent;
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.3s ease-in-out;
}

.card-text {
    color: var(--light-color);
    padding: 0rem 1rem 1rem 1rem;
    font-size: 1.25rem;
    overflow: hidden;
}
.card {
    background-color: rgba(0,0,0,0.25);
    border-radius: 15px;
    -moz-border-radius: 15px;
    min-width: 10rem;
    margin-bottom: 1rem;
    width: 40rem;
    max-width: calc(100% - 4rem);
    box-shadow: 
      inset 0 -.1px 1px rgba(255,255,255,0.1),
      inset 0 1px 5px rgba(0,0,0,0.1),
      0 1px 1px rgba(255,255,255,0.1);
    transition: box-shadow .3s ease-in-out;
}
.card:hover {
    box-shadow: 
      inset 0 -.1px 1px rgba(255,255,255,0.1),
      inset 0 3px 10px rgba(0,0,0,0.1),
      0 1px 1px rgba(255,255,255,0.1);
}

.padded-card {
    padding: 1.5rem 1rem 1rem 2rem;
}
#habilidades .card {
    padding-left: 1rem;
    padding-right: 2rem;
}
#proyectos .card {
    padding-left: 1rem;
    padding-right: 2rem;
}


/* The flip card container - set the width and height to whatever you want. We have added the border property to demonstrate that the flip itself goes out of the box on hover (remove perspective if you don't want the 3D effect */
.flip-card {
    background-color: transparent;
    width: 30rem;   
    height: 200px;
    perspective: 2000px; /* Remove this if you don't want the 3D effect */
  }
  
  /* This container is needed to position the front and back side */
  .flip-card-inner {
    position: relative;
    width: 100%;
    height: 100%;
    transition: transform .6s ease-in-out, margin-left .6s ease-in-out;
    transform-style: preserve-3d;
  }
  
  /* Do an horizontal flip when you move the mouse over the flip box container */
  .flip-card:hover .flip-card-inner {
    transform: rotateY(180deg);
    margin-left: 1rem;
  }
  
  /* Position the front and back side */
  .flip-card-front, .flip-card-back {
    position: absolute;
    width: 100%;
    height: 100%;
    -webkit-backface-visibility: hidden; /* Safari */
    backface-visibility: hidden;
  }
  
  /* Style the front side (fallback if image is missing) */
  .flip-card-front {
    background-color: #ffffff;
    background-image: url("resources/handmade-paper.png");
    -webkit-box-shadow: 0px 10px 21px 3px rgba(0,0,0,0.54);
    -moz-box-shadow: 0px 10px 21px 3px rgba(0,0,0,0.54);
    box-shadow: 0px 10px 21px 3px rgba(0,0,0,0.54);
    color: black;
    padding: 0.5rem;
    height: 15rem;
    border-radius: .5rem;
    justify-content: center;
    align-items: center;
    display: flex; 
    margin-bottom: 7rem;  
  }
  
  /* Style the back side */
  .flip-card-back {
    color: black;
    background-color: #ffffff;
    background-image: url("resources/handmade-paper.png");
    -webkit-box-shadow: 0px 10px 21px 3px rgba(0,0,0,0.54);
    -moz-box-shadow: 0px 10px 21px 3px rgba(0,0,0,0.54);
    box-shadow: 0px 10px 21px 3px rgba(0,0,0,0.54);
    width: 100%;
    height: 100%;
    transform: rotateY(180deg);
    padding: 0.5rem;
    border-radius: .5rem;
    height: 15rem;
    justify-content: center;
    align-items: center;
    display: flex;
    margin-bottom: 7rem;
  }

#profile-pic {
    border-radius: .5rem;
    width:auto;
    height:10rem;
    display: inline-block;
    border: .25rem solid rgba(0,0,0,0.25);
}

.bcard-name {
    color: black;
    margin-left: 2rem;
    font-size: 2rem;
    display: inline-block;
    font-family: 'EB Garamond', serif;;
    background-color: #474747;
    color: transparent;
    text-shadow: 0rem .05rem .05rem #ebebeb;
    -webkit-background-clip: text;  
    -moz-background-clip: text;
    background-clip: text;
}

#home {
    opacity: 1;
    transition: opacity .3s ease-in-out;
    -moz-transition: opacity .3s ease-in-out;
    -webkit-transition: opacity .3s ease-in-out;
}
#content {
    display: none;
    opacity: 0;
    transition: opacity .3s ease-in-out;
    -moz-transition: opacity .3s ease-in-out;
    -webkit-transition: opacity .3s ease-in-out;
}

section {
    padding-top: 1rem;
}

#logo {
    position: fixed;
    z-index: 999;
    bottom: calc(100% - 6.5rem);
    padding: 1.5rem;
    margin: -1.5rem 0 0 -1.5rem;
    opacity: 1;
    transition: bottom .4s ease-in-out;
}
.logobottom {
    top: calc(100% - 3.25rem);
}

.small-icon {
    height: 1.25rem;
    width: auto;
    margin-right: .5rem;
    margin-bottom: -.2rem;
}

#content {
    height: 100%;
    width: 50%;
    margin: auto;
}

#introduccion {
    height: calc(100vh - 3rem);
}

.card-link.text {
    color: black;
}
.card-link.text:hover {
    color: var(--accent-color);
}

.project-link {
    padding: 0 1rem 2.75rem 1rem;
    width: 6rem;
    height:6rem;
    min-width: 6rem;
    min-height: 6rem;
    filter: drop-shadow(1px 1px 1px rgba(0,0,0,0.5));
    transition: filter 0.25s ease-in-out;
}
.project-link:hover {
    filter: drop-shadow(2px 2px 4px rgba(0,0,0,1));
}
.project-icon {
    width: 80%;
    min-width: 80%;
    padding: 10% 10% 0 10%;
}
.project-icon-title {
    width: 100%;
    text-align: center;
    font-size: 1rem;
}

.project-group {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
}

.main-title {
    font-size: 4rem;
    margin-bottom: .5rem;
    width: 100%;
    text-align: center;
}

#language-btn {
    border: none;
    background-color: transparent;
    color: white;
    opacity: .53;
    position: fixed;
    z-index: 999;
    bottom: 1rem;
    right: 1rem;
    margin-top: .5rem;
    font-size: 1rem;
}
#language-btn:hover {
    opacity: .82;
    cursor: pointer;
}
#language-btn:focus {
    outline:none;
}

#educacion .card.padded-card {
    display: flex;
    align-items: center;
}

#educacion .subheader {
    margin: .5rem 0 0rem 0;
}

.educacion-desc {
    flex-direction: column;
    margin-left: 1rem;
}

.peek-preview {
    visibility: hidden;
    width: min-content;
    height: auto;
    opacity: 0;
    position: absolute;
    flex-direction: column;
    -webkit-box-shadow: 0px 10px 21px 3px rgba(0,0,0,0.54);
    -moz-box-shadow: 0px 10px 21px 3px rgba(0,0,0,0.54);
    box-shadow: 0px 10px 21px 3px rgba(0,0,0,0.54);
    border-radius: 1rem;
    overflow: hidden;
    background-color: rgba(255, 255, 255, 0.7);
    transform: scale(0.2);
    transition: all .3s ease-in-out;
    margin-left: -5rem;
    -webkit-backdrop-filter: blur(5px);
    backdrop-filter: blur(5px);
}

.image-description {
    padding: .5rem 1rem .5rem 1rem;
    color: black;
    opacity: .52;
    font-weight: 400;
    font-size: .9rem;
}

.small-icon-list {
    margin: .5rem 0 .5rem 1rem;
    padding: 0; 
    list-style-type: none;
    display: flex;
}

.small-icon-list .small-icon {
    filter: saturate(0);
}

